--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html data-theme="light">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/react.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TOYS STORE</title>
   </head>
